--- a/src/10_colors/_light-colors.scss
+++ b/src/10_colors/_light-colors.scss
@@ -1,7 +1,7 @@
 .theme-light {
-	--accent-h: 215;
+	--accent-h: 210;
 	--accent-s: 100%;
-	--accent-l: 55%;
+	--accent-l: 52%;
 
 	--color-red-rgb: 233, 49, 58;
 	--color-red: rgb(233, 49, 58);
