--- a/src/20_markdown/__markdown.scss
+++ b/src/20_markdown/__markdown.scss
@@ -6,29 +6,30 @@
 
 @container style(--line-height-normal: 1.5) {
 	.markdown-rendered {
-		--list-spacing: 0.1em;
-		--block-padding: 1.25rem;
-		--heading-margin-start: 1em;
-		--heading-spacing: round(nearest, 2em, 2px);
-		--hr-spacing: 1.5rem;
+		--list-spacing: 0.1125em;
+		--block-padding: 1rem;
+		--heading-margin-start: 1.25em;
+		--heading-spacing: round(nearest, 2.125em, 2px);
+		--hr-spacing: 2rem;
 	}
 }
 @container style(--line-height-normal: 1.6) {
 	.markdown-rendered {
-		--p-spacing: 1.25rem;
-		--block-padding: 1.5rem;
-		--heading-margin-start: 1.25em;
-		--heading-spacing: round(nearest, 2.25em, 2px);
-		--hr-spacing: 2rem;
+		--list-spacing: 0.125em;
+		--p-spacing: 1.125rem;
+		--block-padding: 1.125rem;
+		--heading-margin-start: 1.375em;
+		--heading-spacing: round(nearest, 2.375em, 2px);
+		--hr-spacing: 2.25rem;
 	}
 }
 @container style(--line-height-normal: 1.7) {
 	.markdown-rendered {
-		--list-spacing: 0.15em;
-		--p-spacing: 1.375rem;
-		--block-padding: 1.75rem;
-		--heading-margin-start: 1.375em;
-		--heading-spacing: round(nearest, 2.5em, 2px);
+		--list-spacing: 0.1375em;
+		--p-spacing: 1.25rem;
+		--block-padding: 1.25rem;
+		--heading-margin-start: 1.5em;
+		--heading-spacing: round(nearest, 2.625em, 2px);
 		--hr-spacing: 2.5rem;
 	}
 }
@@ -96,7 +97,7 @@ mjx-math {
 	color: var(--icon-color);
 }
 .metadata-properties-heading > .collapse-indicator {
-	opacity: 1;
+	transition: opacity var(--anim-fast-smooth);
 	--collapse-icon-color: var(--text-normal);
 	--collapse-icon-color-collapsed: var(--icon-color);
 }
