--- a/src/20_markdown/_callouts.scss
+++ b/src/20_markdown/_callouts.scss
@@ -2,7 +2,7 @@
 	--code-background: var(--code-background-alt);
 	--blockquote-color: var(--color-base-80);
 	--blockquote-border-color: rgb(var(--callout-color), 0.75);
-	--math-color: var(--color-base-80);
+	--math-color: var(--color-base-100);
 }
 body:not(.disable-callout-styling) {
 	--callout-border-opacity: 0.2;
